# cooking-memo-python

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  my.cnf  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.md  pull_request_template.md
.github/workflows/: issues_to_projects.yml
deploy/: docker-compose.prod.yml  ec2-setup.sh
docker-entrypoint-initdb.d/: 01_create_tables.sql  02_test_user.sql
src/: db.py  main.py  migrate_db.py
src/cruds/: recipe.py  tag.py  task.py
src/models/: recipe.py  task.py
src/routers/: photo.py  recipe.py  scrape.py  tag.py  task.py
src/schemas/: recipe.py  task.py
src/services/: ocr.py  scrape.py
