[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=10.0.0,<11.0.0)",
    "pytesseract (>=0.3.0,<0.4.0)",
    "opencv-python (>=4.8.0,<5.0.0)",
    "numpy (>=1.21.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
